# model_registry

./: README.md  setup.cfg  setup.py
src/model_registry/: model_registry.py
src/model_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
